--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             3. University
         -->
 
-        <p>My name is <span>Amisha Jangra</span>, <br>
+        <p>My name is <span>Anupama Nayak</span>, <br>
             I am currently a <span>2nd year</span> student <br>at<span>IGDTUW, Delhi</span>.
         </p>
     </div>
